--- a/.vercelignore
+++ b/.vercelignore
@@ -4,10 +4,6 @@ node_modules
 .env.development.local
 .env.test.local
 
-# Arquivos de build
-.next
-out
-
 # Logs
 *.log
 npm-debug.log*
@@ -21,3 +17,8 @@ yarn-error.log*
 # Arquivos do sistema
 .DS_Store
 Thumbs.db
+
+# NÃO excluir estes arquivos importantes:
+# .next (será gerado durante o build)
+# prisma/ (necessário para o Prisma)
+# src/ (código fonte)
