--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:deploy": "prisma db push --accept-data-loss",
     "db:studio": "prisma studio",
+    "db:reset": "prisma db push --force-reset",
+    "db:clean": "tsx prisma/clean.ts",
     "postinstall": "prisma generate",
     "vercel-build": "prisma generate && next build"
   },
